--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,8 +63,8 @@
     height: 800px;
     left: 20%;
     top: 5%;
-    background: linear-gradient(135deg, #89fc00, #04e762);
-    filter: blur(175px);
+    background: linear-gradient(135deg, #162cf1, #162cf1);
+    filter: blur(500px);
     transform: rotate(-114.2deg);
   }
   .gradient-04 {
