--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,7 +63,7 @@
       #162cf1,
       rgba(45, 72, 152, 0.15)
     );
-    filter: blur(500px);
+    filter: blur(300px);
     transform: rotate(-114.2deg);
   }
 
@@ -92,14 +92,14 @@
     height: 100px;
     left: 37%;
     bottom: 0;
-    background: linear-gradient(90deg, #89fc00, #04e762);
+    background: linear-gradient(90deg, #2b2bd2, #307fa1);
     filter: blur(150px);
   }
 }
 
 .glass-effect {
   background: rgba(255, 255, 255, 0.1); /* Background color with opacity */
-  backdrop-filter: blur(10px); /* Apply blur effect */
+  backdrop-filter: blur(10px);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); /* Box shadow */
 }
 
