--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,3 +117,15 @@
   backdrop-filter: blur(20px); /* Standard syntax */
   -webkit-backdrop-filter: blur(20px); /* Safari syntax */
 }
+
+/* custom.css */
+@layer components {
+  .list-item-with-bullet {
+    @apply relative;
+  }
+
+  .list-item-with-bullet::after {
+    content: "•";
+    @apply absolute right-0 top-1/2 transform -translate-y-1/2 text-white;
+  }
+}
