--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
   margin: 0;
   box-sizing: border-box;
   color-scheme: dark;
+  /* background: black; */
   scroll-behavior: smooth;
 }
 
@@ -69,12 +70,12 @@
 
   .gradient-04 {
     position: absolute;
-    width: 50vw;
-    height: 60vh;
+    width: 200px;
+    height: 438px;
     left: 0;
     top: 0;
-    background: rgba(45, 72, 152, 0.75);
-    filter: blur(200px);
+    background: #162cf1;
+    filter: blur(190px);
     transform: rotate(-53.13deg);
   }
 
