Final Fixes done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,10 @@
   scroll-behavior: smooth;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 @layer utilities {
   .gradient-02 {
     position: absolute;
